[package]
name = "audio_splitter_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-openai = "=0.31.0-alpha.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread"] }
